--- a/zParserExtender/zParserExtender.vcxproj
+++ b/zParserExtender/zParserExtender.vcxproj
@@ -532,6 +532,7 @@ $(ProjectDir)\incver.exe</Command>
     <ClCompile Include="ZenGin\Gothic_I_Classic\ClassDeclarators_G1.cpp" />
     <ClCompile Include="ZenGin\Gothic_I_Classic\Globals_G1.cpp" />
     <ClCompile Include="ZenGin\Gothic_I_Classic\Statics_G1.cpp" />
+    <ClInclude Include="RedefineExternalResolver.cpp" />
     <ClInclude Include="ReferralToken.cpp">
       <SubType>
       </SubType>
